[gd_scene load_steps=14 format=2]

[ext_resource path="res://img/Fundo-Celular.png" type="Texture" id=1]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://cdb.gd" type="Script" id=4]
[ext_resource path="res://img/Interrogacao-1.png" type="Texture" id=5]
[ext_resource path="res://img/Text-Box-Black-INVEST.png" type="Texture" id=6]
[ext_resource path="res://Celular/celular 17.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 9
font_data = ExtResource( 3 )

[node name="cdb" type="Node2D"]
script = ExtResource( 4 )

[node name="Fundo-Celular" type="Sprite" parent="."]
position = Vector2( 315.5, 184 )
scale = Vector2( 0.350521, 0.359259 )
texture = ExtResource( 1 )

[node name="Celular17" type="Sprite" parent="."]
position = Vector2( 290, 221 )
scale = Vector2( 0.508, 0.508 )
texture = ExtResource( 7 )

[node name="bt_investir" type="Button" parent="."]
margin_left = 253.0
margin_top = 133.0
margin_right = 362.0
margin_bottom = 160.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inserir" type="TextEdit" parent="bt_investir"]
margin_left = 53.0
margin_top = -18.0
margin_right = 179.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enviar" type="Button" parent="bt_investir/inserir"]
anchor_right = 0.095
anchor_bottom = 0.189
margin_left = 58.0
margin_top = 25.0
margin_right = 111.03
margin_bottom = 40.983
custom_fonts/font = SubResource( 2 )
text = "Enviar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_sacar" type="Button" parent="."]
margin_left = 253.0
margin_top = 181.0
margin_right = 362.0
margin_bottom = 208.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sacar" type="TextEdit" parent="bt_sacar"]
margin_left = 56.0
margin_top = -11.0
margin_right = 179.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )

[node name="enviarsacar" type="Button" parent="bt_sacar/sacar"]
margin_left = 57.0
margin_top = 20.0
margin_right = 122.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )
text = "enviar"
flat = true

[node name="investido" type="Label" parent="."]
margin_left = 291.0
margin_top = 214.0
margin_right = 379.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conta" type="Label" parent="."]
margin_left = 292.0
margin_top = 252.0
margin_right = 378.0
margin_bottom = 287.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sair" type="Button" parent="."]
margin_left = 296.0
margin_top = 298.0
margin_right = 325.0
margin_bottom = 328.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ponto-De-Interrogacao" type="Sprite" parent="."]
position = Vector2( 373, 98 )
scale = Vector2( 0.909555, 0.899382 )
texture = ExtResource( 5 )

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 363.0
margin_top = 88.0
margin_right = 383.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CDBInfo" type="Sprite" parent="MenuButton"]
position = Vector2( 76.4999, 84.5625 )
scale = Vector2( 1.34344, 1.04052 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="MenuButton/CDBInfo"]
anchor_left = 0.096
anchor_top = 0.161
anchor_right = 0.924
anchor_bottom = 0.9
margin_left = -54.504
margin_top = -92.345
margin_right = -45.476
margin_bottom = -58.5
custom_fonts/font = SubResource( 7 )
text = " CDB 

GTB Bank
Rentabilidaide: 5% por Dia

Vencimento:
Di√°rio"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="bt_investir" to="." method="_on_bt_investir_pressed"]
[connection signal="pressed" from="bt_investir/inserir/enviar" to="." method="_on_enviar_pressed"]
[connection signal="pressed" from="bt_sacar" to="." method="_on_bt_sacar_pressed"]
[connection signal="pressed" from="bt_sacar/sacar/enviarsacar" to="." method="_on_enviarsacar_pressed"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
[connection signal="mouse_entered" from="MenuButton" to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="MenuButton" to="." method="_on_MenuButton_mouse_exited"]
